[GStreamer] html5test.com says that gstreamer ports do not support WebM for audio https://bugs.webkit.org/show_bug.cgi?id=78244

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-02-11
Reviewed by Eric Seidel.

Specifically advertise support for audio/webm when we support the vorbis
audio codec. This is necessary because gstreamer doesn't advertise it.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::mimeTypeCache): Add an override for audio/webm.

Canonical link: https://commits.webkit.org/95344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107482 268f45cc-cd09-0410-ab3c-d52691b4dbfc